# tts_webui_extension.kimi_audio

./: .gitignore  LICENSE  README.md  extensions.json.patch  pyproject.toml  setup.py
extension_kimi_audio/: __init__.py  main.py
tts_webui_extension/kimi_audio/: main.py
